--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                 </div>
             </div>
             <div class="hero-background">
+                <div class="container">
+                    <div class="row">
+                        <div class="car-moving">
+                            <img src="./assets/images/car.png.webp" alt="">
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
@@ -59,7 +66,33 @@
                 </div>
             </div>
         </section>
-        <section class="instagram">
+        <section class="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="about-image">
+                        <img src="./assets/images/about.png.webp" alt="">
+                    </div>
+                    <div class="about-content">
+                        <span>About Us</span>
+                        <h2>Get ready for real <br> time adventure</h2>
+                        <p>Lets start your journey with us, your dream will come  true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
+                        <a href="" class="about-button">Book Your Destinations</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonial">
+            <div class="container">
+                <div class="row">
+                    <div class="testimonial-content">
+                        <h2>What customers say</h2>
+                        <p>"Lets start your journey with us, your dream will come true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        .
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="instagram">
             <div class="row">
                 <div class="col-items">
                     <img src="./assets/images/instra1.jpg.webp" alt="">
@@ -102,9 +135,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="row">
                 <div class="footer-top">
@@ -160,7 +193,7 @@
                 <i class="fa-solid fa-turn-up"></i>
             </a>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="https://kit.fontawesome.com/7b89daf135.js" crossorigin="anonymous"></script>
