--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/scss/index.css">
-    <title>Tralive</title>
+    <title>About </title>
 </head>
 <body>
     <header>
@@ -38,85 +38,11 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <div class="container">
-                <div class="hero-details">
-                    <h1>Lifelong memories just <br> <span>a few seconds away<hr></span></h1>
-                    <p>Let's start your journey with us, your dream will come true</p>
-                    <a href="" class="hero-button">Explore Destinations</a>
-                </div>
-            </div>
-            <div class="hero-background">
-                <div class="container">
-                    <div class="row">
-                        <div class="car-moving">
-                            <img src="./assets/images/car.png.webp" alt="">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
-        <section class="events">
+        <section class="about-hero">
             <div class="container">
                 <div class="row">
-                    <div class="events-header">
-                        <span>Check Our Best Promotional Tour</span>
-                        <h2>Upcoming Events</h2>
-                    </div>
-                    <div class="slider-cards">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
-                                </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
-                                </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
-                                </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
-                            </div>
-                        </div>
+                    <div class="hero-content">
+                        <h2>About Us</h2>
                     </div>
                 </div>
             </div>
@@ -187,18 +113,6 @@
                     </div>
                     <div class="faq-bottom">
                         <a href="" class="faq-button">Book Your Destinations</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="video">
-            <div class="container">
-                <div class="row">
-                    <div class="video-play">
-                        <div class="play-image">
-                            <a href="#"><img src="./assets/images/play-butto.svg" alt=""></a>
-                        </div>
-                        <h3>Watch our last tour</h3>
                     </div>
                 </div>
             </div>
@@ -305,8 +219,6 @@
             </a>
         </div>
     </footer>
-
-
     <script src="https://kit.fontawesome.com/7b89daf135.js" crossorigin="anonymous"></script>
 </body>
 </html>
