--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/scss/index.css">
-    <title>Tralive</title>
+    <title>About </title>
 </head>
 <body>
     <header>
@@ -38,25 +38,14 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
+        <section class="about-hero">
             <div class="container">
-                <div class="hero-details">
-                    <h1>Lifelong memories just <br> <span>a few seconds away<hr></span></h1>
-                    <p>Let's start your journey with us, your dream will come true</p>
-                    <a href="" class="hero-button">Explore Destinations</a>
-                </div>
-            </div>
-            <div class="hero-background">
-                <div class="container">
-                    <div class="row">
-                        <div class="car-moving">
-                            <img src="./assets/images/car.png.webp" alt="">
-                        </div>
+                <div class="row">
+                    <div class="hero-content">
+                        <h2>All Events</h2>
                     </div>
                 </div>
-
             </div>
-
         </section>
         <section class="events">
             <div class="container">
@@ -66,131 +55,117 @@
                         <h2>Upcoming Events</h2>
                     </div>
                     <div class="slider-cards">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
+                        <div class="card-top">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
                                 </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
                                 </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
                             </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="./assets/images/services1.jpg.webp" alt="">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-info-top">
-                                    <h3>
-                                        <a href="#">Mega Turkey</a>
-                                    </h3>
-                                    <span>$1200</span>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
                                 </div>
-                                <p>
-                                    <a href="#">12 Jan- 18 Jan</a>
-                                    <span>5 Days</span>
-                                </p>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-bottom">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-info-top">
+                                        <h3>
+                                            <a href="#">Mega Turkey</a>
+                                        </h3>
+                                        <span>$1200</span>
+                                    </div>
+                                    <p>
+                                        <a href="#">12 Jan- 18 Jan</a>
+                                        <span>5 Days</span>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="about-us">
-            <div class="container">
-                <div class="row">
-                    <div class="about-image">
-                        <img src="./assets/images/about.png.webp" alt="">
-                    </div>
-                    <div class="about-content">
-                        <span>About Us</span>
-                        <h2>Get ready for real <br> time adventure</h2>
-                        <p>Lets start your journey with us, your dream will come  true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
-                        <a href="" class="about-button">Book Your Destinations</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="testimonial">
-            <div class="container">
-                <div class="row">
-                    <div class="testimonial-content">
-                        <h2>What customers say</h2>
-                        <p>"Lets start your journey with us, your dream will come true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <div class="testi-bottom">
-                            <div class="testi-bottom-left">
-                                <img src="./assets/images/founder-img.png.webp" alt="">
-                            </div>
-                            <div class="testi-bottom-left">
-                                <p>Mark Anthony</p>
-                                <p>CEO of Colorlib</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="faq">
-            <div class="container">
-                <div class="row">
-                    <div class="faq-header">
-                        <span>FAQ</span>
-                        <h2>Full range of travel service</h2>
-                    </div>
-                    <div class="faq-content">
-                        <div class="faq-content-left">
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Starts the automated process.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">The automated process starts.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Automated process starts.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Process the automated magic.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                        </div>
-                        <div class="faq-content-right">
-                            <img src="./assets/images/about2.png.webp" alt="">
-                        </div>
-                    </div>
-                    <div class="faq-bottom">
-                        <a href="" class="faq-button">Book Your Destinations</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <section class="video">
             <div class="container">
                 <div class="row">
@@ -305,8 +280,6 @@
             </a>
         </div>
     </footer>
-
-
     <script src="https://kit.fontawesome.com/7b89daf135.js" crossorigin="anonymous"></script>
 </body>
 </html>
