--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="./assets/images/logo.png.webp" alt="">
+                    <img src="./assets/images/logo.png.webp" alt="Logo of Tralive">
                 </a>
             </div>
-            <div class="menu">
-                <ul class="main-menu">
-                    <li class="menu-item"><a href="index.html">Home</a></li>
-                    <li class="menu-item"><a href="events.html">Events</a></li>
-                    <li class="menu-item"><a href="about.html">About</a></li>
-                    <li class=" dropdown">
-                        <a href="blog.html">Blog</a>
-                        <ul class="dropdown-items">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Events Details</a></li>
-                            <li><a href="#">Blogs Details</a></li>
-                            <li><a href="#">Element</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
-                </ul>
-                <a href="#" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a>
-            </div>
+            <ul class="main-menu">
+                <li class="menu-item"><a href="index.html">Home</a></li>
+                <li class="menu-item"><a href="events.html">Events</a></li>
+                <li class="menu-item"><a href="about.html">About</a></li>
+                <li class=" dropdown">
+                    <a href="blog.html">Blog</a>
+                    <ul class="dropdown-items" >
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Events Details</a></li>
+                        <li><a href="#">Blogs Details</a></li>
+                        <li><a href="#">Element</a></li>
+                    </ul>
+                </li>
+                <li class="menu-item"><a href="contact.html">Contact</a></li>
+                <li class="menu-item"><a href="#" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
             <div class="container">
-                <div class="hero-details">
-                    <h1>Lifelong memories just <br> <span>a few seconds away<hr></span></h1>
-                    <p>Let's start your journey with us, your dream will come true</p>
-                    <a href="" class="hero-button">Explore Destinations</a>
+                <div class="row">
+                    <div class="hero-details">
+                        <h1>Lifelong memories just a <span>few seconds away</span></h1>
+                        <p>Let's start your journey with us, your dream will come true</p>
+                        <a href="" class="hero-button">Explore Destinations</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-background">
